camera: emit video-saved signal by name in gst threads

Static camera_signals array is not initizialized in the gstreamer thread
so we get a critical assertion failed (signal_id > 0) if we emit by id.
This should workaround the issue.

https://bugzilla.gnome.org/show_bug.cgi?id=620637